@@ -59,10 +59,10 @@ import java.util.function.Function;
  */
 public class TypeFactory extends SubFactory {
 
-	private static final Set<String> NULL_PACKAGE_CLASSES = Collections.unmodifiableSet(new HashSet<>(
-			Arrays.asList("void", "boolean", "byte", "short", "char", "int", "float", "long", "double",
-					// TODO (leventov) it is questionable to me that nulltype should also be here
-					CtTypeReference.NULL_TYPE_NAME)));
+	private static final Set<String> NULL_PACKAGE_CLASSES = Set.of(
+			"void", "boolean", "byte", "short", "char", "int", "float", "long", "double",
+			// TODO (leventov) it is questionable to me that nulltype should also be here
+			CtTypeReference.NULL_TYPE_NAME);
 
 	public final CtTypeReference<?> NULL_TYPE = createReference(CtTypeReference.NULL_TYPE_NAME);
 	public final CtTypeReference<Void> VOID = createReference(Void.class);
