@@ -665,7 +665,7 @@ private transient  ClassLoader inputClassloader;
 	@Override
 	public PrettyPrinter createPrettyPrinterAutoImport() {
 		DefaultJavaPrettyPrinter printer = new DefaultJavaPrettyPrinter(this);
-		List<Processor<CtElement>> preprocessors = Collections.unmodifiableList(Arrays.<Processor<CtElement>>asList(
+		List<Processor<CtElement>> preprocessors = List.of(
 				//try to import as much types as possible
 				new ForceImportProcessor(),
 				//remove unused imports first. Do not add new imports at time when conflicts are not resolved
@@ -673,8 +673,7 @@ private transient  ClassLoader inputClassloader;
 				//solve conflicts, the current imports are relevant too
 				new ImportConflictDetector(),
 				//compute final imports
-				new ImportCleaner().setImportComparator(new DefaultImportComparator())
-		));
+				new ImportCleaner().setImportComparator(new DefaultImportComparator()));
 		printer.setIgnoreImplicit(false);
 		printer.setPreprocessors(preprocessors);
 		return printer;
@@ -695,14 +694,13 @@ private transient  ClassLoader inputClassloader;
 
 			if (PRETTY_PRINTING_MODE.FULLYQUALIFIED.equals(prettyPrintingMode)) {
 				DefaultJavaPrettyPrinter printer = new DefaultJavaPrettyPrinter(this);
-				List<Processor<CtElement>> preprocessors = Collections.unmodifiableList(Arrays.<Processor<CtElement>>asList(
+				List<Processor<CtElement>> preprocessors = List.of(
 						//force fully qualified
 						new ForceFullyQualifiedProcessor(),
 						//solve conflicts, the current imports are relevant too
 						new ImportConflictDetector(),
 						//compute final imports
-						new ImportCleaner().setImportComparator(new DefaultImportComparator())
-				));
+						new ImportCleaner().setImportComparator(new DefaultImportComparator()));
 				printer.setIgnoreImplicit(false);
 				printer.setPreprocessors(preprocessors);
 				return printer;
